--- a/VNH.css
+++ b/VNH.css
@@ -111,7 +111,7 @@ body {
     justify-content: space-between;
     width: 80px;
     margin-top: 9vh;
-    margin-right: 40%;
+    margin-right: 10vw;
     animation: start-content 5s;
 }
 
